<resources>
    <string name="app_name">Kemistry</string>
    <string name="ptable_name">Periodic Table</string>
    <string name="elements">Elements</string>
    <string name="conversion">Conversions</string>
    <string name="steam">Steam Table</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="element">Elements</string>
    <string name="carbon">Carbon</string>
    <string name="hydrogen">Hydrogen</string>
    <string name="oxygen">Oxygen</string>
    <string name="nitrogen">Nitrogen</string>
    <string name="sulfur">Sulfur</string>
    <string name="bromine">Bromine</string>
    <string name="phosphorus">Phosphorus</string>
    <string name="button">Button</string>
    <string name="mass_density">Mass and Density</string>
    <string name="volume">Volume</string>
    <string name="kg_lb">1 kg = 2.2046 lb</string>
    <string name="gcm3_lbft3">1 g/cm^3 = 62.428 lb/ft^3</string>
    <string name="lb_kgm3">1 lb/ft^3 = 16.018 kg/m^3</string>


</resources>
